src/objects/Program_Relationships__c.object
<CustomObject>
    <fields>
        <fullName>Program_Status_by_Report__c</fullName>
        <label>Program Status by Report</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Intake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Formerly &quot;Program&quot;, Formerly Treatment Agency, changed 9/29/13 for START by MB</description>
        <label>Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>External Entities, Treatment Agency, CASES Programs</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Warrant Relationships</relationshipLabel>
        <relationshipName>Program_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProviderRPT__c</fullName>
        <description>Single field to show Provider name which can be in multiple sources</description>
        <formula>Program__c &amp; text(Designated_Provider__c) &amp; Provider_Detail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProviderRPT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Address__c</fullName>
        <formula>Program__r.BillingStreet + BR() 
+ Program__r.BillingCity + &quot;, &quot; + Program__r.BillingState + &quot; &quot; + Program__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Detail__c</fullName>
        <label>Provider Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_linkage_Date__c</fullName>
        <inlineHelpText>The date that a client was re-linked to a service they were involved with prior to starting CIRT.</inlineHelpText>
        <label>Re-linkage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Re_linkage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is CASES re-connecting client with agency they have used, but are not currently getting this service from.</description>
        <inlineHelpText>If client has received services at this agency before, and CASES is re-connecting the client with the agency for this service, this is a Re-linkage and the box should be checked. If it is a new agency, leave unchecked.</inlineHelpText>
        <label>Re-linkage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Leaving_Employment__c</fullName>
        <label>Reason for Leaving Employment</label>
        <picklist>
            <picklistValues>
                <fullName>Family Responsibilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed/Obtained Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal/Contract Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Leaving_Other__c</fullName>
        <label>Reason for Leaving (Other)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Leaving__c</fullName>
        <label>Reason for Leaving</label>
        <picklist>
            <controllingField>Institution_Type__c</controllingField>
            <picklistValues>
                <fullName>Dropped Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recent_Follow_Up_Date__c</fullName>
        <description>Determines most recent follow up date.  Used in &apos;Days In Program&apos; field calculation.</description>
        <formula>if(
and(not(isblank(Date_of_Last_Report__c)), isblank(Last_Verified_Phone_Visit__c)), datevalue(Date_of_Last_Report__c ), 

if(and(isblank(Date_of_Last_Report__c), not(isblank(Last_Verified_Phone_Visit__c))), datevalue(Last_Verified_Phone_Visit__c ), 

if(and(not(isblank(Date_of_Last_Report__c)), not(isblank(Last_Verified_Phone_Visit__c)), Date_of_Last_Report__c &gt; Last_Verified_Phone_Visit__c), datevalue(Date_of_Last_Report__c ), 

if(and(not(isblank(Date_of_Last_Report__c)), not(isblank(Last_Verified_Phone_Visit__c)), Date_of_Last_Report__c &lt; Last_Verified_Phone_Visit__c), datevalue(Last_Verified_Phone_Visit__c ), 

null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recent Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reengaged_by_PRP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reengaged by PRP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Billable__c</fullName>
        <inlineHelpText>This field defaults to the &quot;Billable for START?&quot; value on the provider&apos;s account, but START admin/SPA staff can manually edit this after the referral is created.</inlineHelpText>
        <label>Referral Billable?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Type__c</fullName>
        <label>Referral Type</label>
        <picklist>
            <picklistValues>
                <fullName>Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_by_CASES__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Referred by CASES?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Institution_Hours_From_and_To__c</fullName>
        <label>School/ Institution Hours (From and To)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School/ Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Relationships (School/ Institution)</relationshipLabel>
        <relationshipName>Program_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Type_CIRT__c</fullName>
        <label>Service</label>
        <picklist>
            <controllingField>Treatment_Type_CIRT__c</controllingField>
            <picklistValues>
                <fullName>ACCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adolescent Skills Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Day Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavioral Health Outpatient Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clubhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBH - COOCCUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBH - MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBH - SU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entitlements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Resource Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gambling Outpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Home Care Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Community Based Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Community Based Waiver Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Health Care Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inpatient Rehab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intensive Residential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adolescent Skills Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Day Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clubhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment/Vocational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entitlements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Resource Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gambling Outpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Home Care Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Community Based Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Community Based Waiver Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Health Care Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID/Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immigration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inpatient Rehab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Dual Disorder Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intensive Residential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services_Obtained__c</fullName>
        <label>Services Obtained</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subject_of_the_ACS_case__c</fullName>
        <label>Subject of the ACS case</label>
        <picklist>
            <picklistValues>
                <fullName>Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant&apos;s child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant&apos;s sibling</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Treatment_Type_CIRT__c</fullName>
        <label>Treatment</label>
        <picklist>
            <picklistValues>
                <fullName>Treatment Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Service Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Treatment_Type__c</fullName>
        <label>Treatment Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Health Care Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH Clinic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatric ER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Drug Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Service Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>For display on related lists, combines recordtype name for non-referrals with service type for referrals</description>
        <formula>if( RecordType.Name = &apos;Referral&apos;, text(Service_Type__c), 
if( RecordType.Name = &apos;Referral (CIRT)&apos;, text( Service_Type_CIRT__c ), 
RecordType.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warrant__c</fullName>
        <description>previously referred to as &quot;PRP Cycle&quot;, changed by MB 9/29/13</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Relationships</relationshipLabel>
        <relationshipName>Program_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Work_Hours_From_and_To__c</fullName>
        <inlineHelpText>Format: Example 9:00 to 5:00</inlineHelpText>
        <label>Work Hours (From and To)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_appointment_date__c</fullName>
        <label>1st appointment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_appointment_date__c</fullName>
        <label>2nd appointment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X30_Day_Date__c</fullName>
        <formula>dateValue(if(  Days_In_Program_based_on_Phone_Call__c &lt;30 ,&quot;&quot;, text(Program_Start_Date__c + 29)))</formula>
        <label>30-Day Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X6th_appointment_date__c</fullName>
        <label>6th appointment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X7_Day_Followup_Due__c</fullName>
        <formula>Program_Start_Date__c + 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>7 Day Followup Due</label>
        <type>Date</type>
    </fields>
    <label>Program Relationships</label>
    <listViews>
        <fullName>Active_Program_Relationship_Period</fullName>
        <booleanFilter>(4 and (3 or 5)) and ((1 and 6) OR (2 and 7))</booleanFilter>
        <columns>Program__c</columns>
        <columns>Warrant__c</columns>
        <columns>NAME</columns>
        <columns>Escort_Date__c</columns>
        <columns>Escort_Result__c</columns>
        <columns>Program_Start_Date__c</columns>
        <columns>Date_of_Last_Report__c</columns>
        <columns>Discharge_Date_by_Report__c</columns>
        <columns>Days_in_Program__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Escort_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2017</value>
        </filters>
        <filters>
            <field>Program_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2017</value>
        </filters>
        <filters>
            <field>Discharge_Date_by_Report__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Escort_Result__c</field>
            <operation>equals</operation>
            <value>Successful</value>
        </filters>
        <filters>
            <field>Discharge_Date_by_Report__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/30/2017</value>
        </filters>
        <filters>
            <field>Escort_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>1/30/2017</value>
        </filters>
        <filters>
            <field>Program_Start_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>1/30/2017</value>
        </filters>
        <label>Active Program Relationship in Period</label>
    </listViews>
    <listViews>
        <fullName>Active_Program_Relationships_all</fullName>
        <booleanFilter>1 OR 2 OR (3 AND 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Client_Name__c</columns>
        <columns>Program__c</columns>
        <columns>Program_Start_Date__c</columns>
        <columns>Program_Status_Phone_Visit__c</columns>
        <columns>Last_Verified_Phone_Visit__c</columns>
        <columns>Program_Status_by_Report__c</columns>
        <columns>Date_of_Last_Report__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Status_by_Report__c</field>
            <operation>equals</operation>
            <value>Active,Pending Intake</value>
        </filters>
        <filters>
            <field>Program_Status_Phone_Visit__c</field>
            <operation>equals</operation>
            <value>Pending Intake,Active</value>
        </filters>
        <filters>
            <field>Escort_Result__c</field>
            <operation>equals</operation>
            <value>Successful</value>
        </filters>
        <filters>
            <field>Discharge_Date_by_Report__c</field>
            <operation>equals</operation>
        </filters>
        <label>Active Program Relationships - all</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Currently_Active_Program_Relationship1</fullName>
        <booleanFilter>((1 AND 2) or 3) AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Warrant__c</columns>
        <columns>Program__c</columns>
        <columns>Program_Start_Date__c</columns>
        <columns>Escort_Date__c</columns>
        <columns>Escort_Result__c</columns>
        <columns>Program_Status_Phone_Visit__c</columns>
        <columns>Discharge_Date_by_Report__c</columns>
        <columns>Date_of_Last_Report__c</columns>
        <columns>Discharge_Date_Phone_Visit__c</columns>
        <columns>Type__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Escort_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Escort_Result__c</field>
            <operation>equals</operation>
            <value>successful</value>
        </filters>
        <filters>
            <field>Program_Start_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Discharge_Date_by_Report__c</field>
            <operation>equals</operation>
        </filters>
        <label>Currently Active Program Relationship</label>
    </listViews>
    <listViews>
        <fullName>Never_Enrolled_or_Unsuccessful</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>Escort_Date__c</columns>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Program_Start_Date__c</columns>
        <columns>Program_Status_Phone_Visit__c</columns>
        <columns>Discharge_Date_Phone_Visit__c</columns>
        <columns>Last_Verified_Phone_Visit__c</columns>
        <columns>Reengaged_by_PRP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Status_Phone_Visit__c</field>
            <operation>equals</operation>
            <value>Unsuccessful,Never Enrolled</value>
        </filters>
        <filters>
            <field>Escort_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Escort_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Never Enrolled or Unsuccessful</label>
        <sharedTo>
            <role>Executive</role>
            <roleAndSubordinates>PRP</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Non_PRP_Service_Referrals</fullName>
        <columns>NAME</columns>
        <columns>Warrant__c</columns>
        <columns>Program__c</columns>
        <columns>Program_Start_Date__c</columns>
        <columns>Escort_Date__c</columns>
        <columns>Escort_Result__c</columns>
        <columns>Program_Status_Phone_Visit__c</columns>
        <columns>Discharge_Date_by_Report__c</columns>
        <columns>Date_of_Last_Report__c</columns>
        <columns>Discharge_Date_Phone_Visit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Program_Relationships__c.Non_PRP</value>
        </filters>
        <label>Non-PRP Service Referrals</label>
    </listViews>
    <listViews>
        <fullName>NparticID_over_3000</fullName>
        <columns>Legacy_PRP_nParticID__c</columns>
        <columns>Warrant__c</columns>
        <columns>Program__c</columns>
        <columns>Program_Start_Date__c</columns>
        <columns>Escort_Date__c</columns>
        <columns>Escort_Result__c</columns>
        <columns>Program_Status_Phone_Visit__c</columns>
        <columns>Discharge_Date_by_Report__c</columns>
        <columns>Date_of_Last_Report__c</columns>
        <columns>Discharge_Date_Phone_Visit__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Legacy_PRP_nParticID__c</field>
            <operation>greaterOrEqual</operation>
            <value>3000</value>
        </filters>
        <label>NparticID over 3000</label>
    </listViews>
    <listViews>
        <fullName>X24_Hour_7_Day_Follow_Up_Due_BT</fullName>
        <booleanFilter>((1 AND 2 AND 3 AND (4 OR (5 AND 6))) OR (7 AND 8 AND 9)) AND 10</booleanFilter>
        <columns>Escort_Date__c</columns>
        <columns>Client_Name__c</columns>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Program_Start_Date__c</columns>
        <columns>Last_Verified_Phone_Visit__c</columns>
        <columns>Program_Status_Phone_Visit__c</columns>
        <columns>Days_in_Program__c</columns>
        <columns>Program_Status_by_Report__c</columns>
        <columns>Date_of_Last_Report__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Escort_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Escort_Result__c</field>
            <operation>equals</operation>
            <value>Successful</value>
        </filters>
        <filters>
            <field>Discharge_Date_Phone_Visit__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Program_Start_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Program_Start_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Program_Status_Phone_Visit__c</field>
            <operation>equals</operation>
            <value>Pending Intake</value>
        </filters>
        <filters>
            <field>X7_Day_Followup_Due__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Program_Status_Phone_Visit__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Days_In_Program_based_on_Phone_Call__c</field>
            <operation>lessOrEqual</operation>
            <value>6</value>
        </filters>
        <filters>
            <field>Program_Status_by_Report__c</field>
            <operation>notEqual</operation>
            <value>Never Enrolled,Unsuccessful</value>
        </filters>
        <label>24 Hour &amp; 7 Day Follow Up Due</label>
        <sharedTo>
            <role>Executive</role>
            <roleAndSubordinates>PRP</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X7</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND (4 OR (5 AND 6))) OR (7 AND 8 AND (9 OR 10))</booleanFilter>
        <columns>Client_Name__c</columns>
        <columns>Warrant__c</columns>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Program_Start_Date__c</columns>
        <columns>Program_Status_Phone_Visit__c</columns>
        <columns>Escort_Date__c</columns>
        <columns>Escort_Result__c</columns>
        <columns>Days_in_Program__c</columns>
        <columns>Discharge_Date_Phone_Visit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Escort_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Escort_Result__c</field>
            <operation>equals</operation>
            <value>Successful</value>
        </filters>
        <filters>
            <field>Discharge_Date_Phone_Visit__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Program_Start_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Program_Start_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Program_Status_Phone_Visit__c</field>
            <operation>equals</operation>
            <value>Pending Intake</value>
        </filters>
        <filters>
            <field>X7_Day_Followup_Due__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Program_Status_Phone_Visit__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Days_in_Program__c</field>
            <operation>lessOrEqual</operation>
            <value>6</value>
        </filters>
        <filters>
            <field>Days_in_Program__c</field>
            <operation>equals</operation>
        </filters>
        <label>24 Hour &amp; 7 Day Follow Up Due</label>
    </listViews>
    <nameField>
        <displayFormat>PR-C{0}</displayFormat>
        <label>Program Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Relationships</pluralLabel>
    <recordTypes>
        <fullName>ACS_Involvement</fullName>
        <active>true</active>
        <label>ACS Involvement</label>
    </recordTypes>
    <recordTypes>
        <fullName>APT_Services</fullName>
        <active>true</active>
        <description>Program Relationship for non-APT clients who are receiving APT services</description>
        <label>APT Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>EBH_Program_Relationship</fullName>
        <active>true</active>
        <label>EBH Program Relationship</label>
    </recordTypes>
    <recordTypes>
        <fullName>Education</fullName>
        <active>true</active>
        <label>Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employment</fullName>
        <active>true</active>
        <label>Employment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Health_Home</fullName>
        <active>true</active>
        <description>Health Home program relationship</description>
        <label>Health Home</label>
    </recordTypes>
    <recordTypes>
        <fullName>Health_Insurance</fullName>
        <active>true</active>
        <description>Health insurance or benefits the client had before intake</description>
        <label>Health Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hospitalization</fullName>
        <active>true</active>
        <description>An in-patient stay at a hospital</description>
        <label>Hospitalization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_PRP</fullName>
        <active>true</active>
        <label>Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_History</fullName>
        <active>true</active>
        <label>Program History</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_History_CIRT</fullName>
        <active>true</active>
        <label>Program History (CIRT)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Referral_CEP</fullName>
        <active>true</active>
        <label>Referral (CEP)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Referral_CIRT</fullName>
        <active>true</active>
        <label>Referral (CIRT)</label>
    </recordTypes>
</CustomObject>